--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,7 @@
     padding: 2% 2%;
     text-align: left;
   }
-  /* #title primary section */
-  .container-fluid{
-    padding: 2% 0;
-
-  }
-
-
+ 
    /* features section */
 
    #features{
@@ -52,6 +46,7 @@
   .images-slider{
     width: 60%;
     margin-right: 20px;
+    padding-bottom: 4%;
   }
 
 
